# system-setup

./: bashrc_addition  config.fish  configuration.nix  flake.nix  home.nix  rebuild.sh  result  terminal_setup_install.sh  tilda.service
configs/: apt-fast.conf  bashrc_addition  config.fish  config.yaml  dracula.yaml  guake.config  guake.service  layout.yaml  main_layout.yaml  starship.toml  ts.yml
configs/browser_policies/: chrome_policy.json
unused/: configuration.nix  hardware-configuration.nix
util_scripts/: key_utils.py  pyproject.toml  utils.service
