[tool.poetry]
name = "util_scripts"
version = "0.1.0"
description = ""
authors = ["Sam Purkis <sam.purkis@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"
pynput = "^1.7.6"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
